# control_lab_4.1

./: .gitignore  LICENSE  README.md
docs/code_documentation/: INDEX.md  README.md  mujoco_simulation.md  run_mujoco_simulation.md  run_mujoco_simulation2.md  run_mujoco_simulation_startingpose.md  so101_control.md  so101_mujoco_utils.md  so101_mujoco_utils2.md
docs/source_code/: robot_model.md  so101_mujoco_pid_utils.md
ros2_ws/: .gitignore  README.md  WORKSPACE_INFO.md
ros2_ws/src/gazebo_mujoco_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_ws/src/gazebo_mujoco_bridge/config/: bridge_config.yaml  so101_controllers.yaml
ros2_ws/src/gazebo_mujoco_bridge/launch/: gazebo.launch.py  so101_replay.launch.py
ros2_ws/src/gazebo_mujoco_bridge/scripts/: placeholder.py  trajectory_replay.py
ros2_ws/src/gazebo_mujoco_bridge/urdf/: so101.urdf  so101.urdf.xacro
ros2_ws/src/gazebo_mujoco_bridge/worlds/: so101_world.sdf
ros2_ws/src/xarm_perturbations/: package.xml  setup.py
ros2_ws/src/xarm_perturbations/xarm_perturbations/: README.md  analysis_evaluation.py  analysis_evaluation_only.py  auto_tuner.py  circle_maker.py  perturbation_injector.py  trajectory_and_controller.py
simulation_code/: export_trajectory.py  mjcf_to_urdf.py  requirements.txt  setup_gazebo.sh  so101_mujoco_pid_utils.py
simulation_code/model/: so101.urdf  so101.urdf.xacro
simulation_code/trajectory_data/: mujoco_trajectory_meta.json
