<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_mujoco_bridge</name>
  <version>0.1.0</version>
  <description>
    Cross-simulator validation package for MuJoCo to Gazebo Harmonic migration.
    Provides tools and interfaces for comparing simulation results between MuJoCo and Gazebo.
  </description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Minimal required dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- Optional runtime dependencies - uncomment when needed -->
  <!-- <exec_depend>ros_gz_bridge</exec_depend> -->
  <!-- <exec_depend>ros_gz_sim</exec_depend> -->
  <!-- <exec_depend>ros_gz_image</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <!-- <exec_depend>sensor_msgs</exec_depend> -->
  <!-- <exec_depend>geometry_msgs</exec_depend> -->
  <!-- <exec_depend>nav_msgs</exec_depend> -->
  <!-- <exec_depend>tf2</exec_depend> -->
  <!-- <exec_depend>tf2_ros</exec_depend> -->
  <!-- <exec_depend>robot_state_publisher</exec_depend> -->
  <!-- <exec_depend>xacro</exec_depend> -->
  <!-- <exec_depend>rviz2</exec_depend> -->

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <!-- Export configuration -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
